crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_25_add_bools.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: true + false;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[0mλ» [1m[0m
----- stderr -----
Error: type error in binary operator `+`: lhs has type `Bool`, but rhs has type `Bool`
   ╭─[<input>:1:1]
   │
 1 │ true + false;
   │ ──┬─ ┬ ──┬──  
   │   │  │   ╰──── this is of type `Bool`
   │   │  │        
   │   │  ╰──────── the operator in question
   │   │           
   │   ╰─────────── this is of type `Bool`
   │ 
   │ Help: operator `+` can only be applied to two numbers or two strings
───╯
